# precision-autoimmune-agent

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.sh
.streamlit/: config.toml
Docs/: Precision_Autoimmune_Agent_Capabilities_Report.docx  Precision_Autoimmune_Agent_Capabilities_Report.md  Precision_Autoimmune_Agent_Impact_and_Market_Analysis.docx  autoimmune-agent-status-report.docx  demo-guide.docx  demo-guide.md
api/: __init__.py  main.py
app/: __init__.py  autoimmune_ui.py
config/: __init__.py  logging.py  settings.py
docs/: API_REFERENCE.md  ARCHITECTURE_GUIDE.docx  ARCHITECTURE_GUIDE.md  DEMO_GUIDE.docx  DEMO_GUIDE.md  DEPLOYMENT_GUIDE.docx  DEPLOYMENT_GUIDE.md  DESIGN.md  INDEX.md  LEARNING_GUIDE_ADVANCED.docx  LEARNING_GUIDE_ADVANCED.md  LEARNING_GUIDE_FOUNDATIONS.docx  LEARNING_GUIDE_FOUNDATIONS.md  PRECISION_AUTOIMMUNE_AGENT_RESEARCH_PAPER.md  PROJECT_BIBLE.docx  PROJECT_BIBLE.md  Precision_Autoimmune_Agent_Research_Paper.docx  WHITE_PAPER.docx  WHITE_PAPER.md
scripts/: generate_demo_patients.py  patient_emma.py  patient_james.py  patient_karen.py  patient_maya.py  patient_michael.py  patient_sarah.py  patients_345.py  patients_additional.py  patients_david_enhanced.py  patients_dismissals.py  patients_linda_enhanced.py  patients_med_lists.py  patients_rachel_enhanced.py  patients_referrals.py  pdf_engine.py  setup_collections.py
src/: __init__.py  agent.py  collections.py  cross_modal.py  diagnostic_engine.py  document_processor.py  export.py  knowledge.py  models.py  rag_engine.py  (+1 more)
(+9 files in other folders)
